--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Tong Zheng Hee's Resume</title>
 <style>
 .column {
   float: left;
