--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ img {
 	<div  class ="rows">
 		<div class="column">
 			<div class="card">
-				<img src="image.png" alt="Avatar" style="width:100%">
+				<img src="image.jpeg" alt="Avatar" style="width:100%">
 				<div class="container">
 					<h1>Tong Zheng Hee</h1>
 					<h4>
