--- a/index.html
+++ b/index.html
@@ -146,6 +146,11 @@ img {
 				</div>
 				<button type="button" onclick="toggle(this)">Show More</button>
 			</p>
+			
+			<p>
+				<span style="font-weight:bold">Mems Solutions Pte. Ltd. [Software Engineer]</span><br>
+				January 2025–Present <br>
+			</p>
 			<hr style="width:100%;text-align:left;margin-left:0">
 			<h2>SKILL</h2>
 			<p>
