--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ img {
 			</p>
 			
 			<p>
-				<span style="font-weight:bold">Mems Solutions Pte. Ltd. [Software Engineer]</span><br>
+				<span style="font-weight:bold">Mems Solutions Pte. Ltd. [PLC Programmer]</span><br>
 				January 2025–Present <br>
 			</p>
 			<hr style="width:100%;text-align:left;margin-left:0">
