--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ img {
 					<h4>
 					Fresh Graduate Software Engineer<br>
 					Malaysian<br>
-					Seremban, Negeri Sembilan
+					Pasir Ris
 					</h4>
 					<div  class ="rows">
 						<div class="column2">
@@ -90,7 +90,7 @@ img {
 								<span style="font-weight:normal">Male</span><br>
 								<span style="font-weight:normal"><script>document.write(new Date().getFullYear()-2000)</script></span><br>
 								<span style="font-weight:normal">6<sup>th</sup> of June 2000</span><br>
-								<span style="font-weight:normal">+60126197352</span><br>
+								<span style="font-weight:normal">+6586966026</span><br>
 								<span style="font-weight:normal">zhenghee535@gmail.com</span><br>
 								<span style="font-weight:normal">Gaming, Movies, Youtube</span>
 							</h4>
