--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ img {
 				<li><span style="font-weight:bold">Known Language:</span><br>English, Chinese, Malay</li>
 				<li><span style="font-weight:bold">Programming Language:</span><br>C#, Java, C++, Python</li>
 				<li><span style="font-weight:bold">Other:</span><br>Amazon Web Servicese (AWS), Microsoft SQL (MSSQL), PowerPoint, Excel</li>
-				<li><span style="font-weight:bold">Self-Learning:</span><br>Leetcode</li>
+				<li><span style="font-weight:bold">Self-Learning:</span><br>Leetcode(<a href = "https://leetcode.com/u/zhenghee535/">Profile</a>)</li>
 			</ul>
 			</p>
 		</div>
