--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@ img {
 								Gender<br>
 								Age<br>
 								Birthday<br>
-								Phone/ Whatsapp<br>
+								Phone (SG number)<br>
+								Whatsapp (MY number)<br>
 								Email<br>
 								Hobbies
 							</h4>
@@ -91,6 +92,7 @@ img {
 								<span style="font-weight:normal"><script>document.write(new Date().getFullYear()-2000)</script></span><br>
 								<span style="font-weight:normal">6<sup>th</sup> of June 2000</span><br>
 								<span style="font-weight:normal">+6586966026</span><br>
+								<span style="font-weight:normal">+60126197352</span><br>
 								<span style="font-weight:normal">zhenghee535@gmail.com</span><br>
 								<span style="font-weight:normal">Gaming, Movies, Youtube</span>
 							</h4>
