--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 .column2 {
   float: left;
-  width: 30%;
+  width: 40%;
 }
 
 .row:after {
@@ -161,6 +161,7 @@ img {
 				<li><span style="font-weight:bold">Programming Language:</span><br>C#, Java, C++, Python</li>
 				<li><span style="font-weight:bold">Other:</span><br>Amazon Web Servicese (AWS), Microsoft SQL (MSSQL), PowerPoint, Excel</li>
 				<li><span style="font-weight:bold">Self-Learning:</span><br>Leetcode(<a href = "https://leetcode.com/u/zhenghee535/">Profile</a>)</li>
+				<li><span style="font-weight:bold">Github:</span><br>Leetcode(<a href = "https://github.com/zhengheetong/">Profile</a>)</li>
 			</ul>
 			</p>
 		</div>
