--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ img {
 					<h4>
 					Fresh Graduate Software Engineer<br>
 					Malaysian<br>
-					Pasir Ris
+					Pasir Ris, Singapore
 					</h4>
 					<div  class ="rows">
 						<div class="column2">
