--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ img {
 				<li><span style="font-weight:bold">Framework:</span><br>.NET, ASP.NET Core</li>
 				<li><span style="font-weight:bold">Tools:</span><br>Visual Studio, Eclipse, NetBeans, Github, Amazon Web Services (AWS), Microsoft Excel</li>
 				<li><span style="font-weight:bold">SQL:</span><br>Microsoft SQL (SQL Server), MySQL</li>
-				<li><span style="font-weight:bold">Self-Learning:</span><br>Leetcode(<a href = "https://leetcode.com/u/zhenghee535/">Profile</a>)</li>
+				<li><span style="font-weight:bold">Self-Learning:</span><br>Leetcode(<a href = "https://leetcode.com/u/zhenghee535/">Profile</a>), .NET MAUI</li>
 				<li><span style="font-weight:bold">Github Profile:</span><br>(<a href = "https://github.com/zhengheetong/">Link</a>)</li>
 			</ul>
 			</p>
