--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ img {
 			<ul>
 				<li><span style="font-weight:bold">Known Language:</span><br>English, Chinese, Malay</li>
 				<li><span style="font-weight:bold">Programming Language:</span><br>C#, Java, C++, Python, SQL</li>
-				<li><span style="font-weight:bold">Framework:</span><br>.NET, ASP.NET Core, Avalonia</li>
+				<li><span style="font-weight:bold">Framework:</span><br>.NET, ASP.NET Core, Avalonia, Newtonsoft.JSON</li>
 				<li><span style="font-weight:bold">Tools:</span><br>Visual Studio, Eclipse, NetBeans, Github, Amazon Web Services (AWS), Microsoft Excel</li>
 				<li><span style="font-weight:bold">SQL:</span><br>Microsoft SQL (SQL Server), MySQL</li>
 				<li><span style="font-weight:bold">Self-Learning:</span><br>Leetcode(<a href = "https://leetcode.com/u/zhenghee535/">Profile</a>), .NET MAUI</li>
