--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ img {
 				<li><span style="font-weight:bold">Known Language:</span><br>English, Chinese, Malay</li>
 				<li><span style="font-weight:bold">Programming Language:</span><br>C#, Java, C++, Python, SQL</li>
 				<li><span style="font-weight:bold">Framework:</span><br>.NET, ASP.NET Core, Avalonia, Newtonsoft.JSON</li>
-				<li><span style="font-weight:bold">Tools:</span><br>Visual Studio, Eclipse, NetBeans, Github, Amazon Web Services (AWS), Microsoft Excel</li>
+				<li><span style="font-weight:bold">Tools:</span><br>Visual Studio, Eclipse, NetBeans, Github, Amazon Web Services (AWS), Microsoft Excel, Copilot, ChatGPT</li>
 				<li><span style="font-weight:bold">SQL:</span><br>Microsoft SQL (SQL Server), MySQL</li>
 				<li><span style="font-weight:bold">Self-Learning:</span><br>Leetcode(<a href = "https://leetcode.com/u/zhenghee535/">Profile</a>), .NET MAUI</li>
 				<li><span style="font-weight:bold">Github Profile:</span><br>(<a href = "https://github.com/zhengheetong/">Link</a>)</li>
