--- a/index.html
+++ b/index.html
@@ -153,6 +153,20 @@ img {
 				<span style="font-weight:bold">Mems Solutions Pte. Ltd. [Asistant Software Engineer/ PLC Programmer]</span><br>
 				January 2025–Present <br>
 			</p>
+			
+			<hr style="width:100%;text-align:left;margin-left:0">
+			<h2>SELF PROJECT</h2>
+			<p>
+				<span style="font-weight:bold">Sudoku Solver</span><br>
+				Created a Sudoku Solver using C# Window Prestation Form (WPF) as my own learning while using my own Solving Logic<br><br>
+				(<a href="https://github.com/zhengheetong/SudokuSolver">link</a>)
+				<br><br>
+			</p>
+			
+			<p>
+				<span style="font-weight:bold">Mems Solutions Pte. Ltd. [Asistant Software Engineer/ PLC Programmer]</span><br>
+				January 2025–Present <br>
+			</p>
 			<hr style="width:100%;text-align:left;margin-left:0">
 			<h2>SKILL</h2>
 			<p>
