--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@ img {
 				<span style="font-weight:bold">St. Paul Institution (Form 6)</span><br>
 				2018 - 2019<br><br>
 				<span style="font-weight:bold">Asia Pacific University (APU)</span><br>
-				June 2020 – November 2023 (Graduate at June 2024)<br>
-				Bachelor of Software Engineering CGPA: 2.69<br><br>
+				(Graduate at June 2024)<br>
+				Bachelor of Software Engineering<br><br>
 				<span style="font-weight:bold">Course:</span><br>
 				<ul>
 					<li>Object Oriented Programming (Microsoft Visual Studio & Eclipse)</li>
@@ -130,6 +130,11 @@ img {
 			</p>
 			<hr style="width:100%;text-align:left;margin-left:0">
 			<h2>WORKING EXPERIENCE</h2>
+			
+			<p>
+				<span style="font-weight:bold">Mems Solutions Pte. Ltd. [Asistant Software Engineer/ PLC Programmer]</span><br>
+				January 2025–Present <br>
+			</p>
 			<p>
 				<span style="font-weight:bold">Engtex Metal Sdn Bhd [IT Support] (Internship)</span><br>
 				September 2022–November 2022 <br>
@@ -149,10 +154,6 @@ img {
 				<button type="button" onclick="toggle(this)">Show More</button>
 			</p>
 			
-			<p>
-				<span style="font-weight:bold">Mems Solutions Pte. Ltd. [Asistant Software Engineer/ PLC Programmer]</span><br>
-				January 2025–Present <br>
-			</p>
 			
 			<hr style="width:100%;text-align:left;margin-left:0">
 			<h2>SELF PROJECT</h2>
@@ -165,7 +166,7 @@ img {
 			<h2>SKILL</h2>
 			<p>
 			<ul>
-				<li><span style="font-weight:bold">Known Language:</span><br>English, Chinese, Malay</li>
+				<li><span style="font-weight:bold">Language:</span><br>English, Chinese, Malay</li>
 				<li><span style="font-weight:bold">Programming Language:</span><br>C#, Java, C++, Python, SQL</li>
 				<li><span style="font-weight:bold">Framework:</span><br>.NET, ASP.NET Core, WinForm, WPF, Avalonia, Newtonsoft.JSON</li>
 				<li><span style="font-weight:bold">Tools:</span><br>Visual Studio, Eclipse, NetBeans, Github, Amazon Web Services (AWS), Microsoft Excel, Copilot, ChatGPT</li>
