--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@ img {
 				Bachelor of Software Engineering<br><br>
 				<span style="font-weight:bold">Course:</span><br>
 				<ul>
-					<li>Object Oriented Programming (Microsoft Visual Studio & Eclipse)</li>
-					<li>Database and Advanced Database Systems (Microsoft SQL)</li>
-					<li>Data Structures </li>
+					<li>Object Oriented Programming</li>
+					<li>Database and Advanced Database Systems</li>
+					<li>Data Structures</li>
 					<li>Concurrent Programming</li>
 					<li>Advanced Programming Language Concepts</li>
 					<li>Blockchain Development</li>
@@ -162,14 +162,22 @@ img {
 				Created a Sudoku Solver using C# Window Prestation Form (WPF) as my own learning while using my own Solving Logic<br>
 				(<a href="https://github.com/zhengheetong/SudokuSolver">link</a>)<br><br>
 			</p>
+			<p>
+				<span style="font-weight:bold">Boot.dev Project</span><br>
+				<ul>
+					<li><a href="https://github.com/zhengheetong/bookbot">BookBot</a></li>
+					<li><a href="https://github.com/zhengheetong/AsteroidGame">Asteroid Game</a></li>
+					<li><a href="https://github.com/zhengheetong/Static_Site_Generator">Static Site Generator</a></li>
+				</ul>
+			</p>
 			<hr style="width:100%;text-align:left;margin-left:0">
 			<h2>SKILL</h2>
 			<p>
 			<ul>
 				<li><span style="font-weight:bold">Language:</span><br>English, Chinese, Malay</li>
-				<li><span style="font-weight:bold">Programming Language:</span><br>C#, Java, C++, Python, SQL</li>
+				<li><span style="font-weight:bold">Programming Language:</span><br>C#, Java, C++, Python, SQL, Go</li>
 				<li><span style="font-weight:bold">Framework:</span><br>.NET, ASP.NET Core, WinForm, WPF, Avalonia, Newtonsoft.JSON</li>
-				<li><span style="font-weight:bold">Tools:</span><br>Visual Studio, Eclipse, NetBeans, Github, Amazon Web Services (AWS), Microsoft Excel, Copilot, ChatGPT</li>
+				<li><span style="font-weight:bold">Tools:</span><br>Visual Studio, Eclipse, NetBeans, Linux, Github, Amazon Web Services (AWS), Microsoft Excel, Copilot, ChatGPT</li>
 				<li><span style="font-weight:bold">SQL:</span><br>Microsoft SQL (SQL Server), MySQL</li>
 				<li><span style="font-weight:bold">Self-Learning:</span><br>Leetcode(<a href = "https://leetcode.com/u/zhenghee535/">Profile</a>), Boot.Dev (<a href = "https://www.boot.dev/u/tzh535">Profile</a>).NET MAUI</li>
 				<li><span style="font-weight:bold">Github Profile:</span><br>(<a href = "https://github.com/zhengheetong/">Link</a>)</li>
