--- a/index.html
+++ b/index.html
@@ -9,37 +9,40 @@
 <body style="background-color:powderblue;">
 	<div  class ="rows">
 		<div class="column">
+			<div></div>
 			<div class="card">
-				<img src="image.jpeg" alt="Avatar" style="width:50%">
-				<div class="container">
-					<h1>Tong Zheng Hee</h1>
-					<h4>
-					Fresh Graduate Software Engineer<br>
-					Malaysian<br>
-					Pasir Ris, Singapore
-					</h4>
-					<div  class ="rows">
-						<div class="column2">
-							<h4>
-								Gender<br>
-								Age<br>
-								Birthday<br>
-								Phone (SG number)<br>
-								Whatsapp (MY number)<br>
-								Email<br>
-								Hobbies
-							</h4>
-						</div>
-						<div class="column2">
-							<h4>
-								<span style="font-weight:normal">Male</span><br>
-								<span style="font-weight:normal"><script>document.write(new Date().getFullYear()-2000)</script></span><br>
-								<span style="font-weight:normal">6<sup>th</sup> of June 2000</span><br>
-								<span style="font-weight:normal">+6586966026</span><br>
-								<span style="font-weight:normal">+60126197352</span><br>
-								<span style="font-weight:normal">zhenghee535@gmail.com</span><br>
-								<span style="font-weight:normal">Gaming, Movies, Youtube</span>
-							</h4>
+				<div class="column">
+					<img src="image.jpeg" alt="Avatar" style="width:100%">
+				</div>
+				<div class="column">
+					<div class="container">
+						<h1>Tong Zheng Hee</h1>
+						<h4>
+						Fresh Graduate Software Engineer<br>
+						Malaysian<br>
+						Pasir Ris, Singapore
+						</h4>
+						<div  class ="rows">
+							<div class="column2">
+								<h4>
+									Gender<br>
+									Age<br>
+									Birthday<br>
+									Phone Number<br>
+									Email<br>
+									Hobbies
+								</h4>
+							</div>
+							<div class="column2">
+								<h4>
+									<span style="font-weight:normal">Male</span><br>
+									<span style="font-weight:normal"><script>document.write(new Date().getFullYear()-2000)</script></span><br>
+									<span style="font-weight:normal">6<sup>th</sup> of June 2000</span><br>
+									<span style="font-weight:normal">+60126197352</span><br>
+									<span style="font-weight:normal">zhenghee535@gmail.com</span><br>
+									<span style="font-weight:normal">Gaming, Movies, Youtube</span>
+								</h4>
+							</div>
 						</div>
 					</div>
 				</div>
