--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 						<h4>
 						Fresh Graduate Software Engineer<br>
 						Malaysian<br>
-						Pasir Ris, Singapore
+						Negeri Sembilan, Malaysian
 						</h4>
 						<div  class ="rows">
 							<div class="column2">
