--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			
 			<p>
 				<span style="font-weight:bold">Mems Solutions Pte. Ltd. [Asistant Software Engineer/ PLC Programmer]</span><br>
-				January 2025–Present <br>
+				January 2025–Mach 2025 <br>
 			</p>
 			<p>
 				<span style="font-weight:bold">Engtex Metal Sdn Bhd [IT Support] (Internship)</span><br>
@@ -135,3 +135,4 @@
 </body>
 <script src="myscript.js"></script>
 </html>
+
