--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                         <a href="https://github.com/zhengheetong/" target="_blank"><span>GitHub</span></a>
                         <a href="https://leetcode.com/u/zhenghee535/" target="_blank"><span>LeetCode</span></a>
                         <a href="https://www.boot.dev/u/tzh535" target="_blank"><span>Boot.dev</span></a>
-                        <a href="#" target="_blank"><span>LinkedIn</span></a>
+                        <a href="https://www.linkedin.com/in/tong-zheng-hee-8b0055241" target="_blank"><span>LinkedIn</span></a>
                     </div>
                 </div>
             </section>
@@ -245,4 +245,5 @@
 	
 	
 </body>
+
 </html>
