--- a/index.html
+++ b/index.html
@@ -63,6 +63,24 @@
                         <div class="detail-value">Gaming, Movies, YouTube</div>
                     </div>
 
+                    <div class="social-links">
+                        <a href="https://github.com/zhengheetong/" target="_blank" rel="noopener noreferrer" title="GitHub" class="social-icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
+                        </a>
+                        <a href="https://www.linkedin.com/in/tong-zheng-hee-8b0055241/" target="_blank" rel="noopener noreferrer" title="LinkedIn" class="social-icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
+                        </a>
+                        <a href="https://leetcode.com/u/zhenghee535/" target="_blank" rel="noopener noreferrer" title="LeetCode" class="social-icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
+                        </a>
+                        <a href="https://www.boot.dev/u/tzh535" target="_blank" rel="noopener noreferrer" title="Boot.dev" class="social-icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
+                                <text x="12" y="15.5" font-family="Georgia, serif" font-size="10.5" font-weight="bold" text-anchor="middle" fill="currentColor" stroke="none" letter-spacing="-0.5">BD</text>
+                            </svg>
+                        </a>
+                    </div>
+
                     <a href="Resume.pdf" download="Tong_Zheng_Hee_Resume.pdf" class="download-btn">
                         Download Resume
                     </a>
@@ -244,7 +262,7 @@
             </section>
 
             <section class="resume-section reveal">
-				<h2>Skills & Profiles</h2>
+				<h2>Skills</h2>
 				
 				<div class="skill-group">
 					<strong>Backend & Core Languages</strong>
@@ -285,16 +303,6 @@
 					<strong>Spoken Languages</strong>
 					<div class="tags">
 						<span>English</span><span>Chinese</span><span>Malay</span>
-					</div>
-				</div>
-				
-				<div class="skill-group" style="margin-top: 30px;">
-					<strong>Internet Profiles</strong>
-					<div class="tags actionable-links">
-						<a href="https://github.com/zhengheetong/" target="_blank"><span>GitHub</span></a>
-						<a href="https://leetcode.com/u/zhenghee535/" target="_blank"><span>LeetCode</span></a>
-						<a href="https://www.boot.dev/u/tzh535" target="_blank"><span>Boot.dev</span></a>
-						<a href="https://www.linkedin.com/in/tong-zheng-hee-8b0055241" target="_blank"><span>LinkedIn</span></a>
 					</div>
 				</div>
 			</section>
