--- a/index.html
+++ b/index.html
@@ -239,7 +239,15 @@
                 <h2>Own Projects</h2>
                 <div class="project-grid">
                     <div class="project-card-mini">
-                        <strong>Sudoku Solver</strong>
+                        <strong>Cyberpunk Sudoku (Web)</strong>
+                        <p>A web-based Sudoku solver featuring Neural Net image scanning (OCR) and visual logic algorithms.</p>
+                        <a href="https://zhengheetong.github.io/Sudoku-App/" target="_blank">Live Demo &rarr;</a>
+                        <span style="margin: 0 5px; color: var(--text-muted);">|</span>
+                        <a href="https://github.com/zhengheetong/Sudoku-App" target="_blank" style="font-size: 13px; color: var(--text-muted);">Code</a>
+                    </div>
+                    
+                    <div class="project-card-mini">
+                        <strong>Sudoku Solver (Desktop)</strong>
                         <p>A C# WPF application built with custom solving logic. (Version 1.0)</p>
                         <a href="https://github.com/zhengheetong/SudokuSolver" target="_blank">View Code &rarr;</a>
                     </div>
