--- a/index.html
+++ b/index.html
@@ -252,6 +252,11 @@
                         <a href="https://github.com/zhengheetong/SudokuSolver" target="_blank">View Code &rarr;</a>
                     </div>
                     <div class="project-card-mini">
+                        <strong>Cyber-X Downloader</strong>
+                        <p>A cyberpunk-themed Android app to extract and archive MP4s from X, built with a custom OkHttp network engine.</p>
+                        <a href="https://github.com/zhengheetong/X_Video_Downloader" target="_blank">View Code &rarr;</a>
+                    </div>
+                    <div class="project-card-mini">
                         <strong>Bookbot</strong>
                         <p>A Python-based text analysis tool. (Boot.dev Project)</p>
                         <a href="https://github.com/zhengheetong/bookbot" target="_blank">View Code &rarr;</a>
@@ -280,7 +285,7 @@
 				<div class="skill-group">
 					<strong>Backend & Core Languages</strong>
 					<div class="tags">
-						<span>C#</span><span>Java</span><span>Python</span><span>Golang</span><span>C++</span><span>C</span>
+						<span>C#</span><span>Java</span><span>Kotlin</span><span>Python</span><span>Golang</span><span>C++</span><span>C</span>
 					</div>
 				</div>
 				
@@ -294,7 +299,7 @@
 				<div class="skill-group">
 					<strong>Frameworks & UI</strong>
 					<div class="tags">
-						<span>.NET</span><span>ASP.NET Core</span><span>WPF</span><span>WinForms</span><span>Avalonia</span><span>Node.js</span>
+						<span>.NET</span><span>ASP.NET Core</span><span>Android SDK</span><span>WPF</span><span>WinForms</span><span>Avalonia</span><span>Node.js</span>
 					</div>
 				</div>
 
